# checksec-anywhere

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Makefile  README.md  app.js  display.js  fileHandler.js  index.html  security.js  share.js  styles.css
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yaml  deploy.yml
checksec-rust/: Cargo.toml
checksec-rust/checksec.rs/src/: elf.rs
checksec-rust/src/: lib.rs  parse_elf.rs
checksec-rust/tests/: test_elf.rs
checksec-wasm/: .gitignore  Cargo.toml
checksec-wasm/src/: lib.rs
checksec.rs/: .gitignore  Cargo.toml  README.md  index.html
checksec.rs/src/: binary.rs  compression.rs  disassembly.rs  elf.rs  lib.rs  macho.rs  main.rs  pe.rs  proc.rs  sarif.rs  shared.rs  web_bindings.rs
checksec.rs/tests/: test_compression.rs  test_elf.rs  test_macho.rs  test_pe.rs  test_sarif.rs  utils.rs  wasm.rs
checksec.rs/tests/binaries/Mach-O/: asan_enabled  generate_binaries.sh  multiarch
checksec.rs/tests/binaries/elf/: asan_enabled  seperate_code_disabled  seperate_code_enabled  static_linking
frontend/: display.js  fileHandler.js  index.html  security.js  share.js  styles.css  urlHandler.js  utils.js
pkg/: checksec.d.ts  checksec.js  checksec_bg.wasm  checksec_bg.wasm.d.ts  package.json
