[workspace]
members = [
    "checksec.rs",
    "checksec-wasm"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["etke", "Trail of Bits"]
license = "Apache-2.0"
repository = "https://github.com/trailofbits/checksec-anywhere"
homepage = "https://trailofbits.github.io/checksec-anywhere"
edition = "2021"

[profile.release]
codegen-units = 1 # Reduce number of codegen units to increase optimizations
lto = true        # Enable Link Time Optimization
opt-level = 'z'   # Optimize for size
panic = 'abort'   # Abort on panic