[package]
name = "checksec-wasm"
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
categories = ["wasm"]
description = "WebAssembly bindings for checksec binary security analysis tool."
keywords = ["checksec", "binary", "security", "wasm", "webassembly"]

[lib]
crate-type = ["cdylib"]

[dependencies]
checksec = { path = "../checksec.rs" }
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
wasm-bindgen = "0.2.126"
serde-wasm-bindgen = "0.6.5"
