[package]
name = "checksec"
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
categories = ["command-line-utilities"]
description = "Fast multi-platform (ELF/PE/MachO) binary checksec tool and library."
documentation = "https://docs.rs/checksec"
include = ["src/*.rs", "Cargo.toml", "README.md", "LICENSE"]
keywords = ["checksec", "binary", "security", "sarif"]
readme = "README.md"


[dependencies]
ringbuffer = "0.16.0"
url = "2.5.8"
sha2 = "0.11.0"
hex = "0.4.3"
infer = "0.22.0"
serde-sarif = "0.8.0"
clap = { version = "4.6.2", features = ["cargo"] }
colored = { version = "3.1.1", optional = true }
colored_json = { version = "5.0.0", optional = true }
either = "1.16.0"
glob = "0.3.3"
goblin = "0.10.7"
iced-x86 = { version = "1.21.0", optional = true }
ignore = "0.4.30"
itertools = "0.15.0"
memmap2 = "0.9.11"
rayon = "1.12.0"
scroll = "0.13.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
serde_json = "1.0.150"
sysinfo = "0.39.6"
flate2 = "1.1.9"
base64 = "0.22.1"
bincode = { version = "2.0.1", features = ["serde"] }

[target.'cfg(target_os="windows")'.dependencies]
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Kernel",
  "Win32_System_Memory",
  "Win32_System_Threading",
] }

[target.'cfg(target_os="linux")'.dependencies]
xattr = { version = "1.6.1", optional = true }

[lib]
name = "checksec"
path = "src/lib.rs"

[[bin]]
name = "checksec"
path = "src/main.rs"

[features]
color = ["colored", "colored_json", "xattr"]
default = ["elf", "macho", "pe", "color", "maps", "disassembly"]
disassembly = ["iced-x86"]
elf = ["shared"]
macho = ["shared"]
maps = []
pe = []
shared = []
